{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 98,
  "lineage": "9513d85e-db39-3fe7-2d95-5371b450836b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "auto_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025ad1299580a4fd2",
            "domain": "vpc",
            "id": "eipalloc-025ad1299580a4fd2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-180-79.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.180.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "auto_eip"
            },
            "tags_all": {
              "Name": "auto_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "automated-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:internet-gateway/igw-031619ab90912ec5a",
            "id": "igw-031619ab90912ec5a",
            "owner_id": "951044597316",
            "tags": {
              "Name": "automated-igw"
            },
            "tags_all": {
              "Name": "automated-igw"
            },
            "vpc_id": "vpc-0be6c365bbfb7c9db"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025ad1299580a4fd2",
            "association_id": "eipassoc-05aa481034a307d9c",
            "connectivity_type": "public",
            "id": "nat-066733f826298f696",
            "network_interface_id": "eni-090087e69a1142fae",
            "private_ip": "10.0.1.118",
            "public_ip": "3.111.180.79",
            "subnet_id": "subnet-0fc608f326ce2f465",
            "tags": {
              "Name": "automated-NAT"
            },
            "tags_all": {
              "Name": "automated-NAT"
            }
          },
          "dependencies": [
            "aws_eip.auto_eip",
            "aws_internet_gateway.automated-igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:route-table/rtb-08b16cfbf7c29d3dc",
            "id": "rtb-08b16cfbf7c29d3dc",
            "owner_id": "951044597316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-066733f826298f696",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be6c365bbfb7c9db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.auto_eip",
            "aws_internet_gateway.automated-igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:route-table/rtb-09f4c86e797a47947",
            "id": "rtb-09f4c86e797a47947",
            "owner_id": "951044597316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031619ab90912ec5a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be6c365bbfb7c9db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.automated-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0772d7fd50d3d3a40",
            "route_table_id": "rtb-08b16cfbf7c29d3dc",
            "subnet_id": "subnet-0ba22c1308209ba1a"
          },
          "dependencies": [
            "aws_eip.auto_eip",
            "aws_internet_gateway.automated-igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036d90fb772ceb750",
            "route_table_id": "rtb-09f4c86e797a47947",
            "subnet_id": "subnet-0fc608f326ce2f465"
          },
          "dependencies": [
            "aws_internet_gateway.automated-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:subnet/subnet-0ba22c1308209ba1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba22c1308209ba1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951044597316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-automated-vpc"
            },
            "tags_all": {
              "Name": "private-subnet-automated-vpc"
            },
            "vpc_id": "vpc-0be6c365bbfb7c9db"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:subnet/subnet-0fc608f326ce2f465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc608f326ce2f465",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951044597316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-automated-vpc"
            },
            "tags_all": {
              "Name": "public-subnet-automated-vpc"
            },
            "vpc_id": "vpc-0be6c365bbfb7c9db"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:951044597316:vpc/vpc-0be6c365bbfb7c9db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b41e5ec71a6f990b",
            "default_route_table_id": "rtb-030ea1932ed99ec25",
            "default_security_group_id": "sg-0890b26bc22177067",
            "dhcp_options_id": "dopt-0fabdac0e1cac0eab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be6c365bbfb7c9db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030ea1932ed99ec25",
            "owner_id": "951044597316",
            "tags": {
              "Name": "automated-vpc"
            },
            "tags_all": {
              "Name": "automated-vpc"
            }
          }
        }
      ]
    }
  ]
}